# python-project-lvl1

./: .gitignore  Makefile  README.md  first_step.txt  pyproject.toml  setup.cfg
brain_games/: Makefile  __init__.py  base_functions.py  cli.py  game_engine.py
brain_games/games/: __init__.py  base_functions.py  brain_calc.py  brain_even.py  calc.py  even.py  gcd.py  is_gcd.py  is_prime.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_games_.py  brain_gcd.py  brain_prime.py  brain_progression.py  grain_games.py
