[tool.poetry]
name = "python-project-lvl1"
version = "0.1.0"
description = "Hexlet First Project"
authors = ["Dmitry Kholopov <dkholopov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
