[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet First Project"
authors = ["Dmitry Kholopov <dkholopov@yandex.ru>"]
packages = [
    { include = "brain_games/games/*.py" }
]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.4"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-base-functions = "brain_games.games.base_functions:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
